Changed README name

--- a/Recommendations_with_IBM_1.ipynb
+++ b/Recommendations_with_IBM_1.ipynb
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1194,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
        "Name: user_id, Length: 5149, dtype: int64"
       ]
      },
-     "execution_count": 1194,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1195,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
        "  'why relational databases and r?'])"
       ]
      },
-     "execution_count": 1195,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1198,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
        "  'python machine learning: scikit-learn tutorial'])"
       ]
      },
-     "execution_count": 1198,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 858,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 859,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2106,7 @@
        "[5 rows x 714 columns]"
       ]
      },
-     "execution_count": 859,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 860,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2287,7 +2287,7 @@
        "20"
       ]
      },
-     "execution_count": 864,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2309,7 @@
        "662"
       ]
      },
-     "execution_count": 865,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
        "574"
       ]
      },
-     "execution_count": 866,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2352,7 @@
        "0"
       ]
      },
-     "execution_count": 867,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2373,11 +2373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# subset user_item_train and keep only the columns of user_test_set\n",
+    "intersection_idx = np.intersect1d(train_idx, test_idx)\n",
     "intersection_arts = np.intersect1d(train_arts, test_arts)\n",
     "user_item_train_subset = user_item_train.loc[:, intersection_arts]\n",
     "user_item_test_subset = user_item_test.loc[intersection_idx]"
@@ -2385,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,17 +2396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "intersection_idx = np.intersect1d(train_idx, test_idx)\n",
     "intersection_idx_sub_1 = [idx - 1 for idx in intersection_idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2494,11 +2494,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stefaniamindoiu/.pyenv/versions/2.7.18/bin/python: No module named nbconvert\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from subprocess import call\n",
     "call(['python', '-m', 'nbconvert', 'Recommendations_with_IBM.ipynb'])"
